--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
                     </div>
                     <div class="nickname">论坛下线公告</div>
                     <div class="description">
-                        <p>"由于论坛人数不多,且站长为学生党经费有限故只能暂且关闭了..."</p>
+                        <p style="font-size:15px">非常抱歉地通知大家，由于目前论坛的用户数量较少，再加上站长是学生党，经费有限，我们不得不暂时关闭论坛。</p>
+						<p style="font-size:15px">希望大家能够理解这一决定，并感谢大家一直以来的支持！请继续关注站长的其他项目，也希望能得到大家的支持！以下为站长的其他项目↓</p>
                     </div>
                     <div class="zuobiao">
-                        <span>十分抱歉！还请谅解！以下为站长的其他站点，还请支持！</span>
+                        
                         </span>
                     </div>
                     <div class="menu navbar-right links">
