--- a/index.html
+++ b/index.html
@@ -194,4 +194,14 @@ $(function(){
   gtag('config', 'G-TK73WYLG3W');
 </script>
 
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?17bf83b0406905af2661befe5219f7d4";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 </html>
