--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         </span>
                     </div>
                     <div class="menu navbar-right links">
-                        <a class="menu-item" href="/">首页</a> ·
+                        <a class="menu-item" href="https://www.alone-hk.cn">主页</a> ·
                         <a href="https://blog.alone-hk.cn">博客</a>·
                         <a href="https://shop.alone-hk.cn">商店</a>·
                         <a href="https://front.alone-hk.cn">导航</a>·
