--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@
     </div>
 
 
+
+    <div style="position: fixed; top: 10px; right: 10px; padding: 5px 10px; font-size: 12px;">
+        <a href="https://beian.miit.gov.cn/" target="_blank" rel="nofollow">冀ICP备2022015933号-1</a>
+    </div>
+
 </body>
 
 
